--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -174,6 +174,8 @@ jobs:
       NDS_FIRMWARE: ${{ secrets.NDS_FIRMWARE }}
       DSI_FIRMWARE: ${{ secrets.DSI_FIRMWARE }}
       NDS_ROM: ${{ secrets.NDS_ROM }}
+      GBA_ROM: ${{ secrets.GBA_ROM }}
+      GBA_SRAM: ${{ secrets.GBA_SRAM }}
 
   create-release:
     name: Create Release
