--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,5 @@ cmake/toolchain/**          linguist-vendored
 cmake/GitInfo.cmake         linguist-vendored
 cmake/FindOpenGLES.cmake    linguist-vendored
 cmake/FindPythonModules.cmake linguist-vendored
+cmake/CreatePythonVenv.cmake linguist-vendored
 LICENSE                     text
