Create and use an internal venv by default

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,18 @@
-find_package(Python 3.11 REQUIRED)
+option(MELONDSDS_INTERNAL_VENV "Use an internal Python virtual environment for the test suite; disable if using your own." ON)
 
-# FindPython sets "Python_EXECUTABLE", but FindPythonModules wants "PYTHON_EXECUTABLE" (note the caps)
-set(PYTHON_EXECUTABLE "${Python_EXECUTABLE}")
+if (MELONDSDS_INTERNAL_VENV)
+    include(../cmake/CreatePythonVenv.cmake)
+    CreatePythonVenv("${CMAKE_BINARY_DIR}" "venv" VENV "${CMAKE_CURRENT_LIST_DIR}/requirements.txt")
+    set(PYTHON_EXECUTABLE "${VENV}")
+else()
+    find_package(Python 3.11 REQUIRED)
+    # FindPython sets "Python_EXECUTABLE", but FindPythonModules wants "PYTHON_EXECUTABLE" (note the caps)
+    set(PYTHON_EXECUTABLE "${Python_EXECUTABLE}")
+endif()
 
-find_package(PythonModules COMPONENTS libretro PIL)
+# NOTE: These are modules, not package names (i.e. these names get imported as-is)
+find_package(PythonModules REQUIRED COMPONENTS libretro PIL)
 
-# TODO: Make this required once libretro.py is on PyPI
 if (PythonModules_libretro_PATH)
     message(STATUS "Found libretro.py: ${PythonModules_libretro_PATH}")
 endif()
@@ -132,7 +139,7 @@ function(add_python_test)
 
     add_test(
         NAME "${RETRO_NAME}"
-        COMMAND ${Python_EXECUTABLE}
+        COMMAND ${PYTHON_EXECUTABLE}
         -m "${RETRO_TEST_MODULE}"
         "$<TARGET_FILE:melondsds_libretro>"
         "${NDS_CONTENT}"
