Set the Python executable correctly

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -87,8 +87,6 @@ jobs:
         shell: bash
         run: |
           source ~/.venv/melondsds/bin/activate
-          ls -halR ~/.venv
-          which -a python
           cmake "${{ github.workspace }}" \
             -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" \
             -DMELONDS_REPOSITORY_URL="${{ vars.MELONDS_REPOSITORY_URL }}" \
@@ -104,8 +102,8 @@ jobs:
             -DNDS_ROM="${{ env.TESTFILE_DIR }}/${{ secrets.NDS_ROM }}" \
             -DGBA_ROM="${{ env.TESTFILE_DIR }}/${{ secrets.GBA_ROM }}" \
             -DGBA_SRAM="${{ env.TESTFILE_DIR }}/${{ secrets.GBA_SRAM }}" \
-            -DPython_EXECUTABLE:FILEPATH=~/.venv/melondsds/bin/python
             -DMELONDSDS_INTERNAL_VENV=OFF \
+            -DPython_EXECUTABLE:FILEPATH=~/.venv/melondsds/bin/python \
             ${{ inputs.cmake-args }}
 
       - name: Run Test Suite (Linux)
