--- a/.github/actions/test-deps/action.yml
+++ b/.github/actions/test-deps/action.yml
@@ -47,6 +47,7 @@ runs:
       with:
         python-version: '3.12'
         cache: 'pip'
+        cache-dependency-path: "${{ github.workspace }}/test/requirements.txt"
 
     - name: Install Python Dependencies
       shell: bash
