--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -102,8 +102,7 @@ jobs:
             -DNDS_ROM="${{ env.TESTFILE_DIR }}/${{ secrets.NDS_ROM }}" \
             -DGBA_ROM="${{ env.TESTFILE_DIR }}/${{ secrets.GBA_ROM }}" \
             -DGBA_SRAM="${{ env.TESTFILE_DIR }}/${{ secrets.GBA_SRAM }}" \
-            -DMELONDSDS_INTERNAL_VENV=OFF \
-            -DPython_EXECUTABLE:FILEPATH=~/.venv/melondsds/bin/python \
+            -DMELONDSDS_INTERNAL_VENV=OFF
             ${{ inputs.cmake-args }}
 
       - name: Run Test Suite (Linux)
