Remove the `set-extra-args` job
- Originally intended for canary builds against standalone melonDS's `master` branch
- I changed my mind about doing that, as API compatibility isn't guaranteed anyway

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,22 +17,9 @@ on:
       - ".gitignore"
       - "*.gitlab-ci.yml"
 jobs:
-  set-extra-args:
-    name: Set Extra CMake Arguments
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set Canary CMake Args
-        run: |
-          # Set CMake arguments that are only relevant in certain builds;
-          # in this case, scheduled builds will always use the latest upstream master
-          if [[ $GITHUB_EVENT_NAME = 'workflow_dispatch' || $GITHUB_EVENT_NAME = 'schedule' ]]; then
-            echo "EXTRA_CMAKE_ARGS='-DMELONDS_REPOSITORY_URL=https://github.com/melonDS-emu/melonDS.git -DMELONDS_REPOSITORY_TAG=master'" >> "$GITHUB_ENV"
-          fi
-
   windows:
     name: Windows (x86_64)
     uses: ./.github/workflows/build.yaml
-    needs: [ set-extra-args ]
     with:
       archive-name: melondsds_libretro-win32-x86_64
       runs-on: windows-latest
@@ -41,92 +28,84 @@ jobs:
       lib-ext: dll
       shell: msys2 {0}
       test-suite: true
-      cmake-args: -DENABLE_SCCACHE=ON -DSCCACHE="C:/Users/runneradmin/.cargo/bin/sccache.exe" $EXTRA_CMAKE_ARGS
+      cmake-args: -DENABLE_SCCACHE=ON -DSCCACHE="C:/Users/runneradmin/.cargo/bin/sccache.exe"
 
   macos-x86_64:
     name: macOS (x86_64)
     uses: ./.github/workflows/build.yaml
-    needs: [ set-extra-args ]
     with:
       archive-name: melondsds_libretro-macos-x86_64
       runs-on: macos-latest
       target: macos-x86_64
       lib-ext: dylib
-      cmake-args: -DCMAKE_OSX_ARCHITECTURES:STRING="x86_64" -DENABLE_OGLRENDERER=OFF -DCMAKE_APPLE_SILICON_PROCESSOR="x86_64" $EXTRA_CMAKE_ARGS
+      cmake-args: -DCMAKE_OSX_ARCHITECTURES:STRING="x86_64" -DENABLE_OGLRENDERER=OFF -DCMAKE_APPLE_SILICON_PROCESSOR="x86_64"
       # Disabled OpenGL on macOS due to https://github.com/JesseTG/melonds-ds/issues/12
 
   macos-arm64:
     name: macOS (arm64)
     uses: ./.github/workflows/build.yaml
-    needs: [ set-extra-args ]
     with:
       archive-name: melondsds_libretro-macos-arm64
       runs-on: macos-latest
       target: macos-arm64
       lib-ext: dylib
-      cmake-args: -DCMAKE_OSX_ARCHITECTURES:STRING="arm64" -DENABLE_OGLRENDERER=OFF -DCMAKE_APPLE_SILICON_PROCESSOR="arm64" $EXTRA_CMAKE_ARGS
+      cmake-args: -DCMAKE_OSX_ARCHITECTURES:STRING="arm64" -DENABLE_OGLRENDERER=OFF -DCMAKE_APPLE_SILICON_PROCESSOR="arm64"
       # Disabled OpenGL on macOS due to https://github.com/JesseTG/melonds-ds/issues/12
 
   linux-x86_64:
     name: Linux (x86_64)
     uses: ./.github/workflows/build.yaml
-    needs: [ set-extra-args ]
     with:
       archive-name: melondsds_libretro-linux-x86_64
       target: linux-x86_64
       runs-on: ubuntu-latest
       lib-ext: so
       test-suite: true
-      cmake-args: $EXTRA_CMAKE_ARGS
 
   linux-aarch64:
     name: Linux (arm64)
     uses: ./.github/workflows/build.yaml
-    needs: [ set-extra-args ]
     with:
       archive-name: melondsds_libretro-linux-arm64
       target: linux-aarch64
       runs-on: ubuntu-latest
       lib-ext: so
-      cmake-args: -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc -DCMAKE_CXX_COMPILER=aarch64-linux-gnu-g++ -DPKG_CONFIG_EXECUTABLE=/usr/bin/aarch64-linux-gnu-pkg-config $EXTRA_CMAKE_ARGS
+      cmake-args: -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc -DCMAKE_CXX_COMPILER=aarch64-linux-gnu-g++ -DPKG_CONFIG_EXECUTABLE=/usr/bin/aarch64-linux-gnu-pkg-config
 
   android:
     name: Android
     uses: ./.github/workflows/build.yaml
-    needs: [ set-extra-args ]
     with:
       lib-ext: so
       target: android
       core-name: melondsds_libretro_android
       archive-name: melondsds_libretro-android
-      cmake-args: -DENABLE_OGLRENDERER=OFF -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=24 -DCMAKE_TOOLCHAIN_FILE="$ANDROID_NDK/build/cmake/android.toolchain.cmake" $EXTRA_CMAKE_ARGS
+      cmake-args: -DENABLE_OGLRENDERER=OFF -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=24 -DCMAKE_TOOLCHAIN_FILE="$ANDROID_NDK/build/cmake/android.toolchain.cmake"
       runs-on: ubuntu-latest
       # Disabled OpenGL on Android due to https://github.com/JesseTG/melonds-ds/issues/23
 
   ios:
     name: iOS
     uses: ./.github/workflows/build.yaml
-    needs: [ set-extra-args ]
     with:
       runs-on: macos-latest
       target: ios
       archive-name: melondsds_libretro-ios
       info-dir: info
       lib-ext: dylib
-      cmake-args: --toolchain ./cmake/toolchain/ios.toolchain.cmake -DPLATFORM=OS64 -DDEPLOYMENT_TARGET=14 $EXTRA_CMAKE_ARGS
+      cmake-args: --toolchain ./cmake/toolchain/ios.toolchain.cmake -DPLATFORM=OS64 -DDEPLOYMENT_TARGET=14
       # Disabled OpenGL on iOS due to https://github.com/JesseTG/melonds-ds/issues/23
 
   tvos:
     name: tvOS
     uses: ./.github/workflows/build.yaml
-    needs: [ set-extra-args ]
     with:
       runs-on: macos-latest
       target: tvos
       archive-name: melondsds_libretro-tvos
       info-dir: info
       lib-ext: dylib
-      cmake-args: --toolchain ./cmake/toolchain/ios.toolchain.cmake -DPLATFORM=TVOS -DDEPLOYMENT_TARGET=14 $EXTRA_CMAKE_ARGS
+      cmake-args: --toolchain ./cmake/toolchain/ios.toolchain.cmake -DPLATFORM=TVOS -DDEPLOYMENT_TARGET=14
       # Disabled OpenGL on tvOS due to https://github.com/JesseTG/melonds-ds/issues/23
 
   test-windows:
