Clarify a step's name

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -194,7 +194,7 @@ jobs:
             -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" \
             ${{ inputs.cmake-args }}
 
-      - name: Configure (Test Suite)
+      - name: Configure (With Test Suite)
         working-directory: "${{ env.BUILD_DIR }}"
         if: ${{ inputs.test-suite }}
         run: |
