--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -189,6 +189,7 @@ jobs:
       - name: Configure
         working-directory: "${{ env.BUILD_DIR }}"
         if: ${{ ! inputs.test-suite }}
+        shell: bash
         run: |
           cmake "${{ github.workspace }}" \
             -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" \
@@ -197,6 +198,7 @@ jobs:
       - name: Configure (With Test Suite)
         working-directory: "${{ env.BUILD_DIR }}"
         if: ${{ inputs.test-suite }}
+        shell: bash
         run: |
           cmake "${{ github.workspace }}" \
             -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" \
